# TFT-PerfectTraits

./: CMakeLists.txt  README.md  files.json  readin_test.cpp
Data/: FlowChart.drawio
Data/Set10/: Traits_v01.csv  Traits_v02.csv  Units_v01.csv  Units_v02.csv
Data/Set5.5/: L5.csv  L5_cringe
Source/: ParseJSON.r  README.md  tftchampions-teamplanner.json  tfttraits.json
include/: CombController.h  FunTimer.h  ParseCSV.h  Team.h  TeamController.h  Trait.h  TraitController.h  Unit.h  UnitController.h  global.h  init.h
results/: Goodies.txt  Perfect_Units04_1_2_3.txt  Perfect_Units04_1_2_3_4_5.txt  Perfect_Units05_1_2_3_4.txt  Perfect_Units05_1_2_3_4_5.txt  Perfect_Units06_1_2_3_4.txt  Perfect_Units06_1_2_3_4_5.txt  Perfect_Units07_1_2_3_4.txt  Perfect_Units07_1_2_3_4_5.txt  TEST_A.csv  TEST_A.txt  Units4_Cost123.csv  Units4_Cost123.txt
src/: CombController.cpp  FunTimer.cpp  ParseCSV.cpp  Team.cpp  TeamController.cpp  Trait.cpp  TraitController.cpp  Unit.cpp  UnitController.cpp  global.cpp  main.cpp
tests/: tests.cpp  tests.h
